# quantii-frontend

./: Cargo.toml  Makefile  index.html  style.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/components/: desktop.rs  mod.rs  sidebar.rs  window.rs
