[package]
name = "quantii-frontend-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2.3"
gloo-events = "0.1.2"
gloo-utils = "0.1.6"
#js-sys = "0.3.60"
quantii-types = { git = "https://github.com/ardaku/quantii-types" }
rand = { version = "0.8.5" }
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Document",
    "DomRect",
    "Element",
    "ElementDefinitionOptions",
    "HtmlElement",
    "HtmlStyleElement",
    "MouseEvent",
    "NamedNodeMap",
    "Window"
]

[workspace]
members = ["src-tauri"]
